Fix HTML parse errors and center footer text alignment in styles.css

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,3 +1,29 @@
+body {
+  font-family: "Noto Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
+h2{
+    font-weight: 400;
+}
+
+body{
+    background-color: rgb(250, 249, 245);
+}
 body > footer{
     text-align: center;
+}
+
+@media print {
+    nav{
+        display: none;
+        
+    }
+    body{
+        background-color: white;
+    }
 }
